--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "12.1.6",
     "react": "18.1.0",
-    "react-dom": "18.1.0"
+    "react-dom": "18.1.0",
+    "react-outside-click-handler": "^1.3.0",
+    "swiper": "^8.2.2"
   },
   "devDependencies": {
     "eslint": "8.17.0",
